--- a/contacts.html
+++ b/contacts.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./styles/bootstrap.css" />
     <link rel="stylesheet" href="./styles/fonts.css" />
     <script src="scripts/contacts.js"></script>
+    <script src="./scripts/bootstrap.js"></script>
     <title>Contacts</title>
 </head>
 <body>
