adding 2 container to html page for contacts

--- a/contacts.html
+++ b/contacts.html
@@ -11,6 +11,11 @@
     <title>Contacts</title>
 </head>
 <body>
+
+    <div class="contacts-container">
+        <div id="contactsList"></div>
+        <div id="contactsMain"></div>
+    </div>
     
 </body>
 </html>
