button add contact
adding button

placing and styling

-not finished yet-

--- a/contacts.html
+++ b/contacts.html
@@ -15,26 +15,31 @@
 
 <body>
 
-    <div class="container row custom-nm">
+    <div class="container row me-0">
 
         <div id="contactsListContainer" class="col-sm-4 overflow-auto">
-            <div id="contactsList" class="custom-m-48">
+            <div id="contactsList" class="mx-48 my-0">
             </div>
         </div>
 
         <div id="contactsMain" class="col-sm-8 overflow-hidden">
             <div id="contactsHeader" class="contacts-header">
-                <h1 class="fw-bold display-4 custom-lh-120">Contacts</h1>
-                
+                <h1 class="fw-bold display-4 lh-120">Contacts</h1>
+
                 <svg xmlns="http://www.w3.org/2000/svg" width="4" height="63" viewBox="0 0 4 63" fill="none">
-                    <path d="M2 2V61" stroke="#29ABE2" stroke-width="3" stroke-linecap="round"/>
+                    <path d="M2 2V61" stroke="#29ABE2" stroke-width="3" stroke-linecap="round" />
                 </svg>
 
                 <span class="custom-fs-27">Better with a team</span>
             </div>
         </div>
-        
+
     </div>
+
+    <button class="fw-bold custom-lh-120 custom-btn position-absolute top-904px">
+        <span class="custom-fs-21">New contact</span>
+        <img src="./img/icon_add_contact.png" alt="">
+    </button>
 
 </body>
 
