--- a/contacts.html
+++ b/contacts.html
@@ -34,13 +34,16 @@
             </div>
         </div>
 
+        <div class="custom-btn-container">
+            <button class="fw-bold custom-lh-120 custom-btn">
+                <span class="custom-fs-21">New contact</span>
+                <img src="./img/icon_add_contact.png" alt="">
+            </button>
+        </div>
+
     </div>
 
-    <button class="fw-bold custom-lh-120 custom-btn position-absolute top-904px">
-        <span class="custom-fs-21">New contact</span>
-        <img src="./img/icon_add_contact.png" alt="">
-    </button>
-
+    
 </body>
 
 </html>
