custom-btn styling

--- a/contacts.html
+++ b/contacts.html
@@ -33,15 +33,15 @@
                 <span class="custom-fs-27">Better with a team</span>
             </div>
         </div>
-
-        <div class="custom-btn-container">
-            <button class="fw-bold custom-lh-120 custom-btn">
-                <span class="custom-fs-21">New contact</span>
-                <img src="./img/icon_add_contact.png" alt="">
-            </button>
-        </div>
-
     </div>
+
+    <div class="custom-btn-container">
+        <button class="fw-bold custom-lh-120 custom-btn" onclick="openOverlayContact()">
+            <span class="custom-fs-21">New contact</span>
+            <img src="./img/icon_add_contact.png" alt="">
+        </button>
+    </div>
+
 
     
 </body>
