--- a/contacts.html
+++ b/contacts.html
@@ -35,6 +35,8 @@
         </div>
     </div>
 
+    <div id="overlayContact"></div>
+
     <div class="custom-btn-container">
         <button class="fw-bold custom-lh-120 custom-btn" onclick="openOverlayContact()">
             <span class="custom-fs-21">New contact</span>
