first attempt of styling openoverlay
now: trying bootstrap

--- a/contacts.html
+++ b/contacts.html
@@ -35,7 +35,8 @@
         </div>
     </div>
 
-    <div id="overlayContact"></div>
+    <div id="overlayContact" class="rounded-start">
+    </div>
 
     <div class="custom-btn-container">
         <button class="fw-bold custom-lh-120 custom-btn" onclick="openOverlayContact()">
