--- a/contacts.html
+++ b/contacts.html
@@ -35,7 +35,7 @@
         </div>
     </div>
 
-    <div id="overlayContact" class="rounded-start">
+    <div id="overlayContact" class="rounded-start" onclick="closeOverlay()">
     </div>
 
     <div class="custom-btn-container">
