created logo animation

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>JOIN</title>
   </head>
   <body class="">
-    <nav class="navbar p-5">
-      <img src="./img/logo.svg" alt="JOIN Logo" />
+    <nav class="nav p-5">
+      <img src="./img/logo.svg" alt="JOIN Logo" class="logo-img" />
       <div class="nav-join-user">
         <span>Not a JOIN user?</span>
         <button class="signup-btn">Sign up</button>
@@ -23,7 +23,13 @@
           <h1 class="">Log in</h1>
           <span class="login-line"></span>
           <div class="input-container">
-            <input class="text-input" type="email" name="email" id="email" />
+            <input
+              class="text-input"
+              type="email"
+              name="email"
+              id="email"
+              placeholder="Email"
+            />
             <img
               src="./img/mail.svg"
               alt="Small Mail Symbol"
@@ -35,6 +41,7 @@
               class="text-input"
               type="password"
               name="password"
+              placeholder="Password"
               id="password"
             />
             <img
