created signup and forget pwd

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/bootstrap.css" />
     <script src="./scripts/bootstrap.js"></script>
+    <link rel="stylesheet" href="./styles/fonts.css" />
     <link rel="stylesheet" href="/styles/index.css" />
     <title>JOIN</title>
   </head>
@@ -13,13 +14,13 @@
       <img src="./img/logo.svg" alt="JOIN Logo" class="logo-img" />
       <div class="nav-join-user">
         <span>Not a JOIN user?</span>
-        <button class="signup-btn">Sign up</button>
+        <button class="signup-btn" onclick="showSignup();">Sign up</button>
       </div>
     </nav>
 
     <main class="main-container">
       <div class="login-box">
-        <form onsubmit="return false;">
+        <form onsubmit="return false;" id="loginForm">
           <h1 class="">Log in</h1>
           <span class="login-line"></span>
           <div class="input-container">
@@ -60,7 +61,9 @@
               />
               <span>Remember me</span>
             </div>
-            <a href="#" class="forgot-link">Forgot my password</a>
+            <a onclick="forgotMyPassword();" class="forgot-link"
+              >Forgot my password</a
+            >
           </div>
           <div class="login-btn-container">
             <button class="signup-btn">Log in</button>
@@ -69,5 +72,7 @@
         </form>
       </div>
     </main>
+
+    <script src="./scripts/login.js"></script>
   </body>
 </html>
