trying to add sidebar.html -does not work -tried with <iframe> (does not work either)

--- a/contacts.html
+++ b/contacts.html
@@ -7,11 +7,14 @@
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="./styles/bootstrap.css" />
     <link rel="stylesheet" href="./styles/fonts.css" />
-    <link rel="stylesheet" href="styles/contacts.css">
+    <link rel="stylesheet" href="./styles/contacts.css">
+    <link rel="stylesheet" href="./styles/styleSidebar.css">
     <title>Contacts</title>
 </head>
 
 <body onload="init()">
+    <!-- load "sidebar.html into following div-tag" -->
+    <iframe w3-include-html="./templates/sidebar.html"></iframe>
 
     <div class="container row me-0">
 
