--- a/contacts.html
+++ b/contacts.html
@@ -51,7 +51,7 @@
     </div>
 
 
-    <script src="scripts/contacts.js"></script>
+    <script src="./scripts/contacts.js"></script>
     <script src="./scripts/bootstrap.js"></script>
 </body>
 
