overflow: hidden - in <body>

--- a/contacts.html
+++ b/contacts.html
@@ -18,7 +18,7 @@
 
     <div class="container row me-0">
 
-        <div id="contactsListContainer" class="col-sm-4 overflow-auto">
+        <div id="contactsListContainer" class="col-sm-4 overflow-x-hidden overflow-y-auto">
             <div id="contactsList" class="mx-48 my-0">
             </div>
         </div>
