--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="./styles/fonts.css" />
     <link rel="stylesheet" href="./styles/style.css" />
-    
+    <script src="./scripts/sidebar.js"></script>
     <script src="./scripts/bootstrap.js"></script>
     <link rel="stylesheet" href="/styles/index.css" />
     <title>JOIN</title>
