new: button only for trying finding first letters in console.

--- a/contacts.html
+++ b/contacts.html
@@ -19,8 +19,8 @@
     <div class="container row me-0">
 
         <div id="contactsListContainer" class="col-sm-4 overflow-x-hidden overflow-y-auto">
-            <div id="contactsList" class="mx-48 my-0">
-            </div>
+            <!-- <div id="contactsList" class="mx-48 my-0">
+            </div> -->
         </div>
 
         <div id="contactsMain" class="col-sm-8 overflow-hidden">
@@ -45,6 +45,8 @@
             <img src="./img/icon_add_contact.png" alt="">
         </button>
     </div>
+
+    <button onclick="getFirstLetters()">getFirstLettersInConsole</button>
 
 
     <script src="./scripts/contacts.js"></script>
