changed site title

--- a/legal.html
+++ b/legal.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./styles/styleSidebar.css" />
     <link rel="stylesheet" href="./styles/legalnotice.css" />
     <script src="./scripts/sidebar.js"></script>
-    <title>Test</title>
+    <title>JOIN | Legal Notice</title>
   </head>
   <body onload="includeHTML();">
     <div w3-include-html="./templates/sidebar.html"></div>
