--- a/contacts.html
+++ b/contacts.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./styles/fonts.css" />
     <link rel="stylesheet" href="./styles/contacts.css">
     <link rel="stylesheet" href="./styles/styleSidebar.css">
+    <link rel="icon" href="./img/logo_dark.png">
     <title>Contacts</title>
 </head>
 
