--- a/contacts.html
+++ b/contacts.html
@@ -126,7 +126,10 @@
                   <span>Edit</span>
                 </div>
 
-                <div class="icon-dialog d-flex align-items-center gap-2">
+                <div
+                  id="dialog__deleteBtn"
+                  class="icon-dialog d-flex align-items-center gap-2"
+                >
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     width="24"
