--- a/contacts.html
+++ b/contacts.html
@@ -48,7 +48,47 @@
   <body onload="init(); includeHTML()">
     <!-- load "sidebar.html into following div-tag" -->
     <div w3-include-html="./templates/sidebar.html"></div>
-
+    <dialog id="dialog__editContact">
+      <div class="dialog__editLeftSide">
+        <img src="./img/logo_white.svg" alt="White Join Logo" />
+        <h2>Edit contact</h2>
+        <span class="dialog__blue-line"></span>
+      </div>
+      <div class="dialog__editRightSide">
+        <img
+          src="./img/close.svg"
+          alt="Close the Dialog Windows"
+          id="dialog__editClose"
+        />
+        <div class="dialog__editRightImg">
+          <img src="./img/test_circle.png" alt="" srcset="" />
+        </div>
+        <form class="dialog__editRightForm" onsubmit="return false;">
+          <input
+            type="text"
+            placeholder="Name"
+            class="dialog__editInput"
+            id="dialog__editNameInput"
+          />
+          <input
+            type="text"
+            placeholder="Email"
+            class="dialog__editInput"
+            id="dialog__editEmailInput"
+          />
+          <input
+            type="text"
+            placeholder="Phone"
+            class="dialog__editInput"
+            id="dialog__editPhoneInput"
+          />
+          <div class="dialog__editRightBtn">
+            <button class="custom-btn-white btn-hover">Delete</button>
+            <button class="custom-btn btn-hover btn-save">Save</button>
+          </div>
+        </form>
+      </div>
+    </dialog>
     <div class="custom-style-contacts">
       <div
         id="contactsListContainer"
@@ -96,7 +136,10 @@
             <div>
               <h1 id="dialog__name">Tatjana Wolf</h1>
               <div class="d-flex gap-5">
-                <div class="icon-dialog d-flex align-items-center gap-2">
+                <div
+                  id="dialog__editBtn"
+                  class="icon-dialog d-flex align-items-center gap-2"
+                >
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     width="24"
@@ -171,47 +214,6 @@
 
           <h6 class="mt-4 mb-2">Phone</h6>
           <a id="dialog__phone" phone href="tel:">01567283716</a>
-        </dialog>
-        <dialog open id="dialog__editContact">
-          <div class="dialog__editLeftSide">
-            <img src="./img/logo_white.svg" alt="White Join Logo" />
-            <h2>Edit contact</h2>
-            <span class="dialog__blue-line"></span>
-          </div>
-          <div class="dialog__editRightSide">
-            <img
-              src="./img/close.svg"
-              alt="Close the Dialog Windows"
-              id="dialog__editClose"
-            />
-            <div class="dialog__editRightImg">
-              <img src="./img/test_circle.png" alt="" srcset="" />
-            </div>
-            <form class="dialog__editRightForm" onsubmit="return false;">
-              <input
-                type="text"
-                placeholder="Name"
-                class="dialog__editInput"
-                id="dialog__editNameInput"
-              />
-              <input
-                type="text"
-                placeholder="Email"
-                class="dialog__editInput"
-                id="dialog__editEmailInput"
-              />
-              <input
-                type="text"
-                placeholder="Phone"
-                class="dialog__editInput"
-                id="dialog__editPhoneInput"
-              />
-              <div class="dialog__editRightBtn">
-                <button class="custom-btn-white btn-hover">Delete</button>
-                <button class="custom-btn btn-hover btn-save">Save</button>
-              </div>
-            </form>
-          </div>
         </dialog>
       </div>
     </div>
